manifests/app/namespaces/core/transaction/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction
spec:
  selector:
    matchLabels:
      app: transaction
  template:
    metadata:
      labels:
        app: transaction
    spec:
      containers:
      - name: transaction
        image: paulbouwer/hello-kubernetes:1.10.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
