manifests/app/namespaces/core/transaction/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction
spec:
  selector:
    app: transaction
  ports:
  - port: 80
    targetPort: 8080
