manifests/app/namespaces/core/transaction/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transaction
  labels:
    name: transaction
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - transaction.setyaji.my.id
    secretName: transaction-tls
  rules:
  - host: transaction.setyaji.my.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: transaction
            port: 
              number: 80
